# adaptive_robot_planning

./: .gitignore  ArUco_Marquers.py  CMakeLists.txt  COMPARISON_ALL_VERSIONS.md  COMPARISON_REALTIME_VS_HYBRID.md  Query_knowledge_graph.py  README.md  README_MoveIt_PyBullet_Sync.md  Text_cleaning.py  aruco.txt  aruco_arm_controller.py  aruco_detector.py  calibration_data.npz  camera_detection_node.py  config.py  demo_3d_interpolated.py  first-llm.test.py  kg_memory.py  knowledge_graph.json  launch_3d_interpolated_simulation.sh  launch_full_trajectory_robot.sh  launch_full_trajectory_sim.sh  launch_hybrid_simulation.sh  launch_interpolated_simulation.sh  launch_lynx_simulation.sh  launch_real_interpolation.sh  launch_real_robot.sh  launch_real_robot_interpolated.sh  launch_smart_trajectory.sh  launch_system.sh  main.py  manual_test.py  package.xml  perception.py  plan_and_execute.py  plan_loop.py  planner.py  project_outline.md  reasoning.py  reasoning_ollama.py  (+13 more)
calib_images/: camera_calibration.py  capture_calibration.py
calibrage/: calibrage.py  calibration_tester.py  calibration_tester2.py
emotion_detection/: README.md  emotion_detector.py  install.sh  optimized_emotion_detector.py  requirements.txt  run_emotion_detection.sh  simple_emotion_detector.py  start_emotion_detection.sh  test_setup.py
launch/: aruco_complete.launch  aruco_yolo_system.launch  lynx_complete_system.launch  webcam.launch
lynx_workspace/: LYNX_ANALYSIS_SUMMARY.md  LYNX_FINAL_ANALYSIS_REPORT.json  LYNX_WORKSPACE_INDEX.md  README.md  create_final_report.py  lynx_analysis_report.json  lynx_moveit_config_generator.py  lynx_ses900.urdf  lynx_synthesis.py  lynx_synthesis_report.json  lynx_workspace_analyzer.py  lynx_workspace_complete.json  lynx_workspace_complete.py  show_lynx_workspace.py  simple_lynx_analyzer.py
real_robot/: all_points_trajectory_bridge.py  hybrid_trajectory_follower.py  launch_all_points_test.sh  launch_full_trajectory.sh  main.py  main_block_interpolation.py  main_full_trajectory.py  main_full_trajectory_sim.py  main_real_interpolation.py  main_sim.py  main_sim_all_points.py  main_sim_full_trajectory.py  main_sim_interpolated.py  main_sim_ros_bridge.py  main_sim_ros_bridge_3d_interpolated.py  main_sim_ros_bridge_hybrid.py  main_sim_smart_trajectory.py  motor.py  motor_cmd.py  optitrack.py  robot.py  (+19 more)
(+60 files in other folders)
