<?xml version="1.0"?>
<package format="2">
  <name>adaptive_robot_planning</name>
  <version>1.0.0</version>
  <description>Adaptive robot planning with real-time object detection for exercise coaching</description>

  <maintainer email="ahmed-mehdi.soltani@etu.umontpellier.fr">Mhd Soltani</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>moveit_commander</depend>
  
  <!-- Runtime dependencies for Python packages -->
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-ultralytics</exec_depend>

  <export>
  </export>
</package>
